# perfbot

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  Rocket.toml  db.sqlite3  deploy.sh  startup.sh  tailwind.config.js
.github/workflows/: ci.yml  release.yml
assets/: tailwind.css
migrations/2020-12-24-005023_create_log/: up.sql
scripts/: build_docker.sh  deploy.sh  run_docker.sh
src/: bin.rs  config.rs  db.rs  functions.rs  github.rs  helpers.rs  lib.rs  main.rs  matrix.rs  models.rs  schema.rs
src/components/: benchmark_list_entry.rs  mod.rs  navbar.rs  run.rs  run_list_entry.rs
src/functions/: create_measurement.rs  create_run.rs
src/github/: webhook.rs
src/matrix/: handlers.rs  mod.rs  templates.rs
src/models/: benchmark.rs  measurement.rs  run.rs
src/views/: benchmark.rs  home.rs  mod.rs  run.rs  runs.rs
static/: layout.css  main.js  mithril.min.js
static/index/: 6782eaaa.html
templates/: index.html.tera
templates/commands/: help.html  perf.html
