[package]
name = "perfbot"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.118"
serde_json = "1.0.60"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "diesel_sqlite_pool", "serve", "tera_templates"] }
diesel = { version = "*", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.20", features = ["bundled"] }
chrono = { version = "0.4.19" }
octocrab = { version = "0.8.2", git = "https://github.com/Yatekii/octocrab" }
jwt = { version = "0.11.0", features = ["openssl"] }
hmac = "0.10.1"
sha2 = "0.9.2"
openssl ="0.10.32"
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
# migrations_macros = "1.4.2"
dotenv = "0.15.0"
matrix_bot_api = "0.5.2"
tokio = { version = "0.2.24", features = ["full"] }
futures = "0.3.8"
lazy_static = "1.4.0"
askama = "0.10.5"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel" }