[package]
name = "perfbot"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[lib]
name = "perfbot_common"
path = "src/lib.rs"

[[bin]]
name = "perfbot"
path = "src/bin.rs"

[dependencies]
rocket = { git = "https://github.com/Yatekii/Rocket" }
serde = "1.0.118"
serde_json = "1.0.60"
rocket_contrib = { git = "https://github.com/Yatekii/Rocket", default-features = false, features = ["json", "diesel_sqlite_pool", "serve", "tera_templates"] }
diesel = { version = "2.0.0", git = "https://github.com/diesel-rs/diesel", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.20", features = ["bundled"] }
chrono = { version = "0.4.19" }
octocrab = { version = "0.8.5" }
jwt = { version = "0.11.0", features = ["openssl"] }
hmac = "0.10.1"
sha2 = "0.9.2"
openssl ="0.10.32"
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
migrations_macros = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
tokio = { version = "0.2.24", features = ["full"] }
futures = "0.3.8"
askama = "0.10.5"
matrix-sdk = "0.2.0"
url = "*"
dirs = "*"
async-trait = "*"
ctrlc = "*"
figment = "0.10.8"